# jetbrains-tasks-2021-summer

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
include/: Color.hpp  TriangleDrawer.hpp  WindowManager.hpp
src/: Color.cpp  TriangleDrawer.cpp  WindowManager.cpp  main.cpp
src/main/kotlin/org/jetbrains/summer/matricesmultiplier/: Main.kt  Matrix.kt  PaddedMatrix.kt
src/main/kotlin/org/jetbrains/summer/parser/: FunctionDefinition.kt  Lexema.kt  Lexer.kt  Main.kt  Nodes.kt  Parser.kt  ParserExceptions.kt
src/test/kotlin/org/jetbrains/summer/matricesmultiplier/: MatrixTest.kt
src/test/kotlin/org/jetbrains/summer/parser/: ParserTest.kt
